# AI-RMF-Tool

./: $REPORT_FILE  .gitignore  Dockerfile.sentry  README.md  ROADMAP.md  agent-list.txt  ai-rmf  ai_rmf_core.py  bootstrap.sh  docker-compose.yml  index.html  librarian-needs.txt  main.py  pyproject.toml
.gemini/: settings.json
.gemini/skills/ai-rmf-optimizer/: SKILL.md
.github/workflows/: ci.yml
cli/: autopilot.py  dashboard.py  govern.py  health.py  manage.py  map.py  measure.py  red_team.py  remediate.py  report.py  setup.py  utils.py  verify.py
config/: remediation_rules.json  templates.json
core/: auditor.py  discovery.py  inspector.py  jailbreak_engine.py  pf_provider.py  provider.py  proxy.py  red_teamer.py  remediator.py  sentry.py  swarm.py  utils.py  vault.py  vault_security.py
docs/: Hylton_Compliance_Portal_Architecture.md  PLATFORM_MATRIX.md  architecture_impact_map.md
librarian/: adversary_prompt.md  data_factory.py  prompt.md  red_teamer_prompt.md  setup_prompt.md
librarian/personas/: compliance_officer.json  compliance_officer_prompt.md  ethics_researcher.json  ethics_researcher_prompt.md  policy_expert.json  policy_expert_prompt.md  privacy_officer.json  privacy_officer_prompt.md  red_teamer.json
scripts/: secret_scan.sh
scripts/skills/ai-rmf-optimizer/: SKILL.md
tests/: test_ai_rmf_core.py  test_auditor.py  test_autopilot.py  test_core.py  test_coverage_hardening.py  test_dashboard.py  test_data_factory.py  test_discovery.py  test_govern.py  test_govern_interactive.py  test_health.py  test_inspector.py  test_jailbreak_engine.py  test_jailbreak_evolution.py  test_manage.py  test_manage_interactive.py  test_map.py  test_measure.py  test_nist_json.py  test_obfuscator.py  test_pf_provider.py  test_provider_coverage.py  test_provider_vault.py  test_proxy.py  test_red_team_cli.py  test_red_teamer_core.py  test_remediate.py  test_remediator_core.py  test_report.py  test_setup.py  test_setup_interactive.py  test_swarm.py  test_swarm_metrics.py  test_swarm_new_personas.py  test_utils.py  test_vault.py  test_vault_security.py  test_verify.py  test_verify_bleed.py
workspace/sprints/S004-2026-03-24/: sprint_report.md
