[project]
name = "ai-rmf-tools"
version = "0.1.0"
description = "NIST AI RMF 1.0 Implementation Toolkit"
readme = "README.md"
authors = [{ name = "WarrenRoyH" }]
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "questionary",
    "litellm",
    "pydantic",
    "psutil",
    "numpy==2.2.3",
    "pytest",
]

[project.optional-dependencies]
standard = [
    "garak",
    "llm-guard==0.3.16",
    "transformers", # Removed pinned version to resolve conflict with llm-guard
    "tf-keras",
    "pip-audit",
    "spacy",
]
full = [
    "arize-phoenix",
    "markdown",
    "xhtml2pdf",
]
middleware = [
    "fastapi",
    "uvicorn",
    "openinference-instrumentation-openai",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
]

[tool.uv]
managed = true
package = false
